creacion de hoja de vida

--- a/index.html
+++ b/index.html
@@ -1,1 +1,138 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hoja de vida</title>
+    <link href="./css/style.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+    <div id="content">
+        <div id="content-header">
+            <div id="content-img">
+                <div id="div-img">
+                    <!--<img src="img/foto_cv.jpg" />-->
+                </div>
+            </div>
+
+            <ul class="list-header">
+                <li>CONTACTO</li>
+                <br>
+                <ul class="list-child">
+                    <li>castellaryerlis18@gmail.com</li>
+                    <li>+57 304 648 1836</li>
+                    <li><a href="https://www.linkedin.com/in/yerlys-maria09/" class="li-link">Linkedin</a></li>
+                    <li><a href="https://github.com/Yerlis09" class="li-link">GITHUB</a></li>
+                </ul>
+            </ul>
+
+            <ul class="list-header">
+                <li>HABILIDADES</li>
+                <br>
+                <ul class="list-child">
+                    <li>Programar</li>
+                    <li>cocinar</li>
+                </ul>
+            </ul>
+
+            <ul class="list-header">
+                <li>SOFTWARES</li>
+                <br>
+                <ul class="list-child">
+                    <li>Java</li>
+                    <li>PostgreSql</li>
+                    <li>Zk framework</li>
+                    <li>SCRUM</li>
+                    <li>Javascripst</li>
+                    <li>Reacjs</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                </ul>
+            </ul>
+
+            <ul class="list-header">
+                <li>HOBBIES</li>
+                <br>
+                <ul class="list-child">
+                    <li>Hacer deporte</li>
+                    <li>Estudiar ingles</li>
+                    <li>Escuchar Podcast</li>
+                </ul>
+            </ul>
+
+        </div>
+        <div id="content-body">
+            <div id="content-Titulo">
+                <ul style="list-style: none;">
+                    <li id="titulo-1">YERLYS MARIA</li>
+                    <li id="titulo-2">CASTELLAR JULIO</li>
+                </ul>
+            </div>
+            <div class="content-presentation">
+                <h3 id="presentation-1">Desarrolladora FullStack Javascripst jr</h3>
+                <p id="presentation-2">Mis objetivos académicos radican en graduarme de la Universidad de Cartagena como
+                    Ingeniera de Software. Mi
+                    enfoque laboral apunta al área de Desarrollo Web, desarrollo Full Stack o áreas afines a mis
+                    estudios.</p>
+            </div>
+
+            <div class="content-presentation">
+                <div class="titulo-content">
+                    EDUCACIÓN
+                </div>
+                <ul class="list-header-expe">
+                    <ul class="list-exper">
+                        <li>2012 - 2018 Bachiller</li>
+                        <li>2019 - 2022 Tecnologa en analisis y desarrollo de sistemas de información</li>
+                        <li>2021 - 2022 Ingenieria de sistemas (sin terminar)</li>
+                        <li>2023 - Ingenieria de Software (actualidad)</li>
+                    </ul>
+                </ul>
+            </div>
+
+            <div class="content-presentation">
+                <div class="titulo-content">
+                    EXPERIENCIA
+                </div>
+                <ul class="list-header-expe">
+                    <ul class="list-exper">
+                        <li>2021 - 2022 Etapa productiva</li>
+                        <li>2022 - 2022 Desarrolladora de Software en RealFire S.A.</li>
+                    </ul>
+                </ul>
+            </div>
+            <div class="content-presentation">
+                <table>
+                    <tr>
+                        <th>Tecnologias</th>
+                        <th>temas de interes</th>
+                        <th>APP</th>
+                    </tr>
+                    <tr>
+                        <td>C#</td>
+                        <td>Javascripst</td>
+                        <td>Duolingo</td>
+                    </tr>
+                    <tr>
+                        <td>Java</td>
+                        <td>Reacjs</td>
+                        <td>Python master</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="content-presentation">
+                <input value="castellaryerlys@gmail.com">
+                <br>
+                <br>
+                <textarea>
+                </textarea>
+                <button>Contactar</button>
+            </div>
+        </div>
+    </div>
+</body>
+
+</html>
